A small bugfix, little cleanup and add missing message.